--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </div>
 
 <script>
-const WEBAPP_URL = 'https://script.google.com/macros/s/AKfycbyBSQbJi73mphw5duI451OeSg-K9f0bRKeZDE-LGg6-8iVJbBWA0YbPQ2Ds48BrfWEUmA/exec';
+const WEBAPP_URL = 'https://autumn-credit-8be9.ev-dmaundu.workers.dev/';
 let currentNID = null;
 let prefillProfile = null;
 
