--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@
     color: #555;
   }
 
+  /* Name and Credits styling */
+  #welcomeName strong { color: #2e7d32; }  /* bold green */
+  #userCredits strong { color: #d32f2f; }   /* bold red */
+  #creditsDisclaimer {
+    display: block;
+    margin-top: 6px;
+    font-size: 12px;
+    color: #555;
+  }
 </style>
 </head>
 <body>
@@ -124,8 +133,9 @@
   <!-- PROFILE -->
   <div id="profileSection" class="hidden">
     <div class="top-info">
-      <span id="welcomeName">Welcome: ...</span>
-      <span id="userCredits">Credits: ...</span>
+      <span id="welcomeName">Welcome: <strong>...</strong></span>
+      <span id="userCredits"><strong>Credits: ...</strong></span>
+      <span id="creditsDisclaimer">⚠️ Ensure you have sufficient credits to ensure you get alerts from customers without delay.</span>
       <label>Status</label>
       <select id="status" onchange="saveAvailability()">
         <option value="Available">Available</option>
@@ -185,8 +195,8 @@ async function login() {
       currentNID = resp.nid;
       document.getElementById('loginSection').classList.add('hidden');
       document.getElementById('profileSection').classList.remove('hidden');
-      document.getElementById('welcomeName').innerText = "Welcome: " + (resp.name || currentNID);
-      document.getElementById('userCredits').innerText = "Credits: " + (resp.credits || 0);
+      document.getElementById('welcomeName').innerHTML = "Welcome: <strong>" + (resp.name || currentNID) + "</strong>";
+      document.getElementById('userCredits').innerHTML = "<strong>Credits: " + (resp.credits || 0) + "</strong>";
       document.getElementById('status').value = resp.status || "Available";
 
       prefillProfile = await callAPI('getDriverProfile', { nid: currentNID });
